--- a/app/src/main/res/layout/activity_crear_gasto.xml
+++ b/app/src/main/res/layout/activity_crear_gasto.xml
@@ -33,7 +33,7 @@
             android:layout_weight="2"
             android:layout_gravity="center"
             android:nextFocusDown="@+id/activity_crear_gasto_et_descripcion"
-            style="@style/XPDroidEditText"/>
+            style="@style/XPDroidEditTextImporte"/>
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -141,7 +141,7 @@
             android:hint="@string/descripcion"
             android:layout_gravity="center"
             android:layout_weight="2"
-            style="@style/XPDroidEditText" />
+            style="@style/XPDroidEditTextDescripcion" />
 
         <RelativeLayout
             android:layout_width="0dp"
