--- a/app/src/main/res/layout/activity_crear_gasto_favorito.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_favorito.xml
@@ -31,7 +31,7 @@
             android:layout_centerInParent="true"
             android:hint="@string/importe"
             android:layout_weight="2"
-            style="@style/XPDroidEditText"
+            style="@style/XPDroidEditTextImporte"
             android:layout_gravity="center" />
 
         <RelativeLayout
@@ -85,7 +85,7 @@
             android:inputType="textCapSentences"
             android:hint="@string/descripcion"
             android:layout_weight="2"
-            style="@style/XPDroidEditText"
+            style="@style/XPDroidEditTextDescripcion"
             android:layout_gravity="center" />
 
         <RelativeLayout
