#56 Se agrego el logo en todas las pantallas. #58 Se agrego Categorias como opcion del NavDrawer y el crearCategoria. Tambien se creo la interfaz del servicio ServicioCategoriaBusiness.

--- a/app/src/main/res/menu/menu_crear_gasto.xml
+++ b/app/src/main/res/menu/menu_crear_gasto.xml
@@ -3,10 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoActivity">
 
+    <item android:id="@+id/icono_xpdroid"
+        android:title="@string/app_name"
+        android:icon="@drawable/ic_xpdroid"
+        android:clickable="false"
+        app:showAsAction="always" />
+
     <item android:id="@+id/action_crear_gasto"
-    android:title="@string/action_crear_gasto"
-    android:icon="@drawable/ic_action_new"
-    app:showAsAction="always" />
+        android:title="@string/action_crear_gasto"
+        android:icon="@drawable/ic_action_new"
+        app:showAsAction="always" />
 
 
     <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
