--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -34,6 +34,7 @@
         <item>@string/navdrawitem6</item>
         <item>@string/navdrawitem7</item>
         <item>@string/navdrawitem8</item>
+        <item>@string/navdrawitem9</item>
     </string-array>
 
 
