--- a/app/src/main/res/menu/menu_crear_categoria.xml
+++ b/app/src/main/res/menu/menu_crear_categoria.xml
@@ -1,12 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.funebunny.xpdroid.main.ui.activity.InicioActivity">
+    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearCategoriaActivity">
 
     <item android:id="@+id/icono_xpdroid"
         android:title="@string/app_name"
         android:icon="@drawable/ic_xpdroid"
-        android:clickable="false"
+        app:showAsAction="always" />
+
+    <item android:id="@+id/action_crear_categoria"
+        android:title="@string/action_crear_categoria"
+        android:icon="@drawable/ic_action_new"
         app:showAsAction="always" />
 
 </menu>
