--- a/app/src/main/res/menu/menu_crear_gasto_favorito.xml
+++ b/app/src/main/res/menu/menu_crear_gasto_favorito.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoFavoritoActivity">
 
-    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
-        <!--android:orderInCategory="100" app:showAsAction="never" />-->
+    <item android:id="@+id/icono_xpdroid"
+        android:title="@string/app_name"
+        android:icon="@drawable/ic_xpdroid"
+        app:showAsAction="always" />
 
     <item android:id="@+id/action_crear_gasto_favorito"
         android:title="@string/action_crear_gasto_favorito"
