--- a/app/src/main/res/menu/menu_crear_presupuesto.xml
+++ b/app/src/main/res/menu/menu_crear_presupuesto.xml
@@ -2,8 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.funebunny.xpdroid.main.ui.activity.CrearPresupuestoActivity">
-    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
-        <!--android:orderInCategory="100" app:showAsAction="never" />-->
+
+    <item android:id="@+id/icono_xpdroid"
+        android:title="@string/app_name"
+        android:icon="@drawable/ic_xpdroid"
+        app:showAsAction="always" />
 
     <item android:id="@+id/action_crear_presupuesto"
         android:title="@string/action_crear_presupuesto"
