--- a/app/src/main/res/menu/menu_historial_gastos_completo.xml
+++ b/app/src/main/res/menu/menu_historial_gastos_completo.xml
@@ -2,6 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.funebunny.xpdroid.main.ui.activity.HistorialGastosCompletoActivity">
+
+    <item android:id="@+id/icono_xpdroid"
+        android:title="@string/app_name"
+        android:icon="@drawable/ic_xpdroid"
+        android:clickable="false"
+        app:showAsAction="always" />
+
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+
 </menu>
