--- a/app/src/main/res/layout/fragment_drive_backup.xml
+++ b/app/src/main/res/layout/fragment_drive_backup.xml
@@ -53,7 +53,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/respaldar"
+                android:text="@string/boton_respaldar"
                 android:id="@+id/fragment_drive_backup_bt_respaldar"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="false"
@@ -69,7 +69,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/restaurar"
+                android:text="@string/boton_restaurar"
                 android:id="@+id/fragment_drive_backup_bt_restaurar"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true" />
